--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ketul ki First Website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Bookmarks</title>
+    <link rel="stylesheet" href="" class="css">
 </head>
 <body>
-    Hey This is my first website.
-    <script src="script.js"></script>
+    <h1>My Bookmarks using h1</h1>
+    <h2>Main Bookmarks using h2</h2>
+    <h3>Main Bookmarks using h3</h3>
+    <h4>Main Bookmarks using h4</h4>
+    <h5>Main Bookmarks using h5</h5>
+    <h6>Main Bookmarks using h6</h6>
+    <p style="background-color: red;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, nemo fuga? Repellat nostrum quam, provident molestiae adipisci nihil dolor sed ipsum error hic.</p>
+
 </body>
 </html>
